[gd_scene load_steps=13 format=2]

[ext_resource path="res://BackgroundMinigames.png" type="Texture" id=1]
[ext_resource path="res://MenuGames.gd" type="Script" id=2]
[ext_resource path="res://AssetsMenu/Music.tres" type="Texture" id=3]
[ext_resource path="res://AssetsMenu/MusicMute.tres" type="Texture" id=4]
[ext_resource path="res://pngegg.png" type="Texture" id=5]
[ext_resource path="res://AssetsMenu/SAirr.tres" type="Texture" id=6]
[ext_resource path="res://png-transparent-basket-of-fruit-vegetarian-cuisine-drawing-vegetable-natural-foods-food-fruit (1).png" type="Texture" id=7]
[ext_resource path="res://AssetsMenu/Direita.tres" type="Texture" id=8]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.807843 ), Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0.631373 ), Color( 0, 0, 0, 0.556863 ), Color( 0, 0, 0, 0.501961 ), Color( 0, 0, 0, 0.45098 ), Color( 0, 0, 0, 0.278431 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Pag"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 605 ), Vector2( 1039, 605 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ), Vector2( -9, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.00680542, 0.00680542, 0.0078125, 1 ), Color( 0.00680542, 0.00680542, 0.0078125, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Pagesq"

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.278431 ), Color( 0, 0, 0, 0.45098 ), Color( 0, 0, 0, 0.556863 ), Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0.811765 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1032, 605 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.17065, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BackgroundMinigames" type="Sprite" parent="."]
position = Vector2( 509.76, 299.728 )
scale = Vector2( 1.06087, 0.88897 )
texture = ExtResource( 1 )

[node name="CheckButton2" type="CheckButton" parent="." groups=[
"button",
]]
visible = false
margin_right = 113.0
margin_bottom = 108.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="." groups=[
"button",
]]
margin_right = 113.0
margin_bottom = 108.0
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="." groups=[
"button",
]]
margin_left = 365.775
margin_top = 62.4289
margin_right = 1165.78
margin_bottom = 862.429
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="." groups=[
"button",
]]
margin_left = 1.58643
margin_top = 495.704
margin_right = 102.586
margin_bottom = 596.704
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="." groups=[
"button",
]]
margin_left = 376.366
margin_top = 303.649
margin_right = 1296.37
margin_bottom = 975.649
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="." groups=[
"button",
]]
margin_left = 907.691
margin_top = 250.95
margin_right = 1007.69
margin_bottom = 351.95
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Entrando = SubResource( 1 )
anims/Pag = SubResource( 2 )
anims/Pagesq = SubResource( 3 )
"anims/Transição" = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 605.0
mouse_filter = 2
color = Color( 0.00680542, 0.00680542, 0.0078125, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="CheckButton2" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
